# TransactionPlugin

./: .gitignore  README.md  main.py  pyproject.toml  settings.py
tests/utils/: test_descriptors.py  test_functions.py  test_json_handler.py
transactionsinfo/: dto.py
utils/: descriptors.py  functions.py  json_handler.py
